# ChangeLog for www-servers/thttpd
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-servers/thttpd/ChangeLog,v 1.82 2015/03/02 09:27:07 ago Exp $

  02 Mar 2015; Agostino Sarubbo <ago@gentoo.org> thttpd-2.27.0.ebuild:
  Stable for ppc, wrt bug #535694

  12 Jan 2015; Chema Alonso <nimiux@gentoo.org> thttpd-2.27.0.ebuild:
  Stable for amd64 wrt bug #535694

  08 Jan 2015; Markus Meier <maekke@gentoo.org> thttpd-2.27.0.ebuild:
  arm stable, bug #535694

  03 Oct 2014; Anthony G. Basile <blueness@gentoo.org> -thttpd-2.26.4-r2.ebuild:
  Remove older stable version

*thttpd-2.27.0 (03 Oct 2014)

  03 Oct 2014; Anthony G. Basile <blueness@gentoo.org> +thttpd-2.27.0.ebuild,
  files/thttpd-renamed-htpasswd.patch:
  Version bump

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> thttpd-2.26.4-r2.ebuild,
  thttpd-2.26.4-r3.ebuild, thttpd-9999.ebuild:
  QA: drop trailing '.' from DESCRIPTION

  14 Mar 2014; Agostino Sarubbo <ago@gentoo.org> thttpd-2.26.4-r3.ebuild:
  Stable for ppc64, wrt bug #499308

  12 Mar 2014; Agostino Sarubbo <ago@gentoo.org> thttpd-2.26.4-r3.ebuild:
  Stable for sparc, wrt bug #499308

  20 Feb 2014; Agostino Sarubbo <ago@gentoo.org> thttpd-2.26.4-r3.ebuild:
  Stable for x86, wrt bug #499308

  04 Feb 2014; Chema Alonso <nimiux@gentoo.org> thttpd-2.26.4-r3.ebuild:
  Stable for amd64 wrt bug #499308

  02 Feb 2014; Agostino Sarubbo <ago@gentoo.org> thttpd-2.26.4-r3.ebuild:
  Stable for ppc, wrt bug #499308

  31 Jan 2014; Markus Meier <maekke@gentoo.org> thttpd-2.26.4-r3.ebuild:
  arm stable, bug #499308

  08 Jan 2014; Mike Frysinger <vapier@gentoo.org> thttpd-2.26.4-r2.ebuild,
  thttpd-2.26.4-r3.ebuild, thttpd-9999.ebuild:
  Inherit the user eclass for enewuser/etc...

  20 Dec 2013; Anthony G. Basile <blueness@gentoo.org> files/thttpd.service:
  Add WorkingDirectory to systemd unit, bug #494704.  Thanks Roc Vallès!

  20 Dec 2013; Anthony G. Basile <blueness@gentoo.org> ChangeLog: