@@ -1,6 +1,9 @@
 # ChangeLog for www-servers/thttpd
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-servers/thttpd/ChangeLog,v 1.82 2015/03/02 09:27:07 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-servers/thttpd/ChangeLog,v 1.83 2015/03/02 17:21:17 nimiux Exp $
+
+  02 Mar 2015; Chema Alonso <nimiux@gentoo.org> thttpd-2.27.0.ebuild:
+  Add missing || die (bug #535694 comment #4
 
   02 Mar 2015; Agostino Sarubbo <ago@gentoo.org> thttpd-2.27.0.ebuild:
   Stable for ppc, wrt bug #535694
